k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: dltagg-ns
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # Ensures it uses NGINX Ingress
  rules:
    - host: api.dltagg.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: fastapi-service
              port:
                number: 8000
  tls:
    - hosts:
        - api.dltagg.com
      secretName: tls-secret  # Cert-Manager (Let’s Encrypt) will create this automatically
